--- a/src/main/resources/errors-list_es.properties
+++ b/src/main/resources/errors-list_es.properties
@@ -9,4 +9,4 @@
 1003=Solicitud inválida. Recurso solicitado no encontrado
 ### Application errors ###
 1004=Estado de mascota no válido
-1005=Error al llamar a {} API desde PetStore
+1005=Error al llamar a {0} API desde PetStore
