--- a/src/main/resources/errors-list_fr.properties
+++ b/src/main/resources/errors-list_fr.properties
@@ -9,4 +9,4 @@
 1003=demande non valide. Ressource demandée non trouvée
 ### Application errors ###
 1004=Statut d'animal invalide
-1005=Erreur lors de l'appel de l'API {} depuis PetStore
+1005=Erreur lors de l'appel de l'API {0} depuis PetStore
