final commit. Implemented wiremock testing, integration testing with TestRestTemplate, and Standalone mockmvc setup

--- a/src/main/resources/errors-list_es.properties
+++ b/src/main/resources/errors-list_es.properties
@@ -10,3 +10,4 @@
 ### Application errors ###
 1004=Estado de mascota no válido
 1005=Error al llamar a {0} API desde PetStore
+1006=Error al analizar el archivo de respuesta simulado json
