--- a/src/main/resources/errors-list_fr.properties
+++ b/src/main/resources/errors-list_fr.properties
@@ -10,3 +10,4 @@
 ### Application errors ###
 1004=Statut d'animal invalide
 1005=Erreur lors de l'appel de l'API {0} depuis PetStore
+1006=Erreur lors de l'analyse du fichier de réponses simulé Json
